--- a/BECStyle.css
+++ b/BECStyle.css
@@ -2,7 +2,12 @@
     background-color: white;
 }
 .logo{
-    transform: scale(0.6);
+    display: block;
+    margin-left: 0;
+    margin-top: 0 ;
+    width: 100%;
+    height: 100%;
+    padding: 0;
 }
 .aboutUsCarouselImages {
     position: relative;
