--- a/CSSFiles/BECStyle.css
+++ b/CSSFiles/BECStyle.css
@@ -1,6 +1,3 @@
-.container{
-    background-color: white;
-}
 .container {
     width: 100%;
     background-color: white;
@@ -11,6 +8,12 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.8rem 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 1000;
 }
 .navbarLeft {
     display: flex;
@@ -39,14 +42,6 @@
 .mainMenu a:hover {
     color: #d32f2f;
     transform: translateY(-5px);
-}
-.navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: white;
-    z-index: 1000;
 }
 .search-box {
     display: flex;
@@ -320,71 +315,31 @@
     line-height: 1.4;
 }
 .siteFooter {
-    margin-top: 40px;
-    text-decoration: none;
-    background-color: #003366;
+    background-color: #333;
     color: #fff;
-    padding: 10px 10px 10px;
-    font-family: 'Montserrat', sans-serif;
+    padding: 2rem;
+    margin-top: 100px;
 }
 
 .footerContent {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    align-items: flex-start;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.footerLogo img {
-    width: 150px;
-    margin-bottom: 20px;
-}
-
-.footerLinks,
-.footerContact {
-    flex: 1 1 250px;
-    margin: 20px;
-}
-
-.footerLinks h3,
-.footerContact h3 {
-    font-size: 1.2em;
-    margin-bottom: 15px;
-    color: #fff;
-}
-
-.footerLinks ul {
-    list-style: none;
-    padding: 0;
-}
-
-.footerLinks ul li {
-    margin-bottom: 10px;
+    flex-wrap: wrap;
+    gap: 2rem;
 }
 
 .footerLinks ul li a {
-    color: #ccc;
+    color: #fff;
     text-decoration: none;
-    transition: color 0.3s;
 }
 
 .footerLinks ul li a:hover {
-    color: #fff;
+    text-decoration: underline;
 }
 
-.footerContact p {
-    margin: 5px 0;
-}
 .footerBottom {
     text-align: center;
-    margin-top: 30px;
-    font-size: 0.9em;
+    margin-top: 2rem;
+    font-size: 0.9rem;
     color: #ccc;
-}
-.footerSocial a {
-    text-decoration: none;
-    color: inherit;
-    display: inline-block;
 }
