--- a/CSSFiles/aboutUsStyle.css
+++ b/CSSFiles/aboutUsStyle.css
@@ -94,6 +94,7 @@
     padding: 30px;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    background-image: linear-gradient(to bottom, #4be4c8 0%, #385898 74%);
 }
 
 .aboutUsSection:nth-child(even) {
